k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quizie
  labels:
    name: quizie
